--- a/index.html
+++ b/index.html
@@ -1438,7 +1438,7 @@ $('body').css('background', '#ffffff');
 document.getElementById('kirims').innerHTML = "Memproses....";
 
  setTimeout(function(){
-  window.location.href='login.php';
+  window.location.href='login.html';
  
     }, 1000);
  
